--- a/app/server/projects.json
+++ b/app/server/projects.json
@@ -1,1 +1,17 @@
-{"data":[{"id":"qqg8jtk5iso","name":"edconnect","abstract":"hello this is an abstract","authors":["efe","john"],"tags":["e-learning"],"createdBy":"uqdecg701wb"}]}
+{
+    "data": [
+        {
+            "id": "qqg8jtk5iso",
+            "name": "edconnect",
+            "abstract": "hello this is an abstract",
+            "authors": [
+                "efe",
+                "john"
+            ],
+            "tags": [
+                "e-learning"
+            ],
+            "createdBy": "uqdecg701wb"
+        }
+    ]
+}
