--- a/app/server/projects.json
+++ b/app/server/projects.json
@@ -1,17 +1,1 @@
-{
-    "data": [
-        {
-            "id": "qqg8jtk5iso",
-            "name": "edconnect",
-            "abstract": "hello this is an abstract",
-            "authors": [
-                "efe",
-                "john"
-            ],
-            "tags": [
-                "e-learning"
-            ],
-            "createdBy": "uqdecg701wb"
-        }
-    ]
-}
+{"data":[{"id":"qqg8jtk5iso","name":"edconnect","abstract":"hello this is an abstract","authors":["efe","john"],"tags":["e-learning"],"createdBy":"uqdecg701wb"},{"id":"vwgfr8l9m0m","name":"Microservice","abstract":"Some stuff like bla","authors":["bla bla"],"tags":["#fff"],"createdBy":"247bdpag3aw"}]}
